Implemented the new substance initialization and reknit the markdown files

--- a/vignettes/Development/Quality control/Publication/Molecular_verification_no_class.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_no_class.Rmd
@@ -40,6 +40,8 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
 substance <- Potential_substances[1]
 
 source("baseScripts/initWorld_onlyMolec.R")
+
+World$substance <- substance
 ```
 
 The SBoo world is initialized for a substance. In this case, that
