--- a/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
@@ -10,12 +10,12 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-# knitr::knit_meta()
-# knitr::opts_chunk$set(echo = TRUE)
-# projectRoot <- paste(getwd(), "..", "..", "..", "..", sep = "/")
-# knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
+knitr::knit_meta()
+knitr::opts_chunk$set(echo = TRUE)
+projectRoot <- paste(getwd(), "..", "..", "..", "..", sep = "/")
+knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 options(dplyr.summarise.inform=FALSE)
-knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 10)
+knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
 This vignette demonstrates the verification process of SimpleBox
@@ -31,7 +31,7 @@ between the models to not exceed 0.1%.
 ```{r InitializeSBoo, include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 substance <- "microplastic"
 source("baseScripts/initWorld_onlyPlastics.R")
-
+World$substance <- substance
 ```
 
 The SBoo world is initialized for a substance. In this case, that
