--- a/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
@@ -40,6 +40,8 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
 substance <- Potential_substances[2]
 
 source("baseScripts/initWorld_onlyMolec.R")
+
+World$substance <- substance
 ```
 The SBoo world is initialized for a substance. In this case, that
 substance is `r World$fetchData("Substance")`, which is of class:
