--- a/vignettes/Development/Quality control/Publication/Molecular_verification_metal.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_metal.Rmd
@@ -39,6 +39,8 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
 substance <- Potential_substances[5]
 
 source("baseScripts/initWorld_onlyMolec.R")
+
+World$substance <- substance
 ```
 
 
